hide overflow for about left to prevent 3d image showing over the border radius corners

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -61,6 +61,7 @@
 .about-left {
   border-radius: 50px;
   box-shadow: 0px 0px 5px 0px #000000;
+  overflow: hidden;
 }
 .about-right {
   width: 50%;
